tests/snapshots/examples_fixtures/Modules__Analytics__Rules.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Analytics/Rules.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `Modules.Analytics.Rules` doesn't match file path `examples/Modules/Analytics/Rules.flx`.

  examples/Modules/Analytics/Rules.flx:4:1
  |
4 | module Modules.Analytics.Rules {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
