tests/snapshots/examples_fixtures/Modules__Analytics__Transforms.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Analytics/Transforms.flx
== compile ==
failed (module)
== diagnostics ==
Error[E024]: Module Path Mismatch

Module name `Modules.Analytics.Transforms` doesn't match file path `examples/Modules/Analytics/Transforms.flx`.

  examples/Modules/Analytics/Transforms.flx:4:1
  |
4 | module Modules.Analytics.Transforms {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
